--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
-    "cordova-android": "8.1.0",
+    "cordova-android": "^8.1.0",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -75,6 +76,7 @@
       "cordova-plugin-googlemaps": {}
     },
     "platforms": [
+      "ios",
       "android"
     ]
   }
