--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
       "cordova-plugin-googlemaps": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
